# rust-newsletter-backend

./: .env  Cargo.toml  configuration.yaml
migrations/: 00001_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
tests/: health_check.rs
